--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.jawumbo</groupId>
     <artifactId>gitmaven</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <inceptionYear>2026</inceptionYear>
     <description>This is a test project</description>
 
@@ -31,7 +29,7 @@
 
     <scm>
         <url>https://github.com/Jawumbo/gitmaven</url>
-        <tag>HEAD</tag>
+        <tag>v1.0.0</tag>
         <connection>scm:git:https://github.com/Jawumbo/gitmaven.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/Jawumbo/gitmaven.git</developerConnection>
     </scm>
