--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
                 <configuration>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <arguments>-Dgpg.passphrase=${gpg.passphrase} -Dgpg.sign=true</arguments>
+                    <preparationGoals>clean verify</preparationGoals>
+                    <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
                 </configuration>
             </plugin>
             <plugin>
