--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
         <developerConnection>scm:git:ssh://git@github.com/Jawumbo/gitmaven.git</developerConnection>
     </scm>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/Jawumbo/gitmaven</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
