--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.jawumbo</groupId>
     <artifactId>gitmaven</artifactId>
-    <version>1.0.10</version>
+    <version>1.0.11-SNAPSHOT</version>
     <inceptionYear>2026</inceptionYear>
     <description>This is a test project for git and maven2</description>
 
@@ -29,7 +29,7 @@
 
     <scm>
         <url>https://github.com/Jawumbo/gitmaven</url>
-        <tag>v1.0.10</tag>
+        <tag>HEAD</tag>
         <connection>scm:git:https://github.com/Jawumbo/gitmaven.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/Jawumbo/gitmaven.git</developerConnection>
     </scm>
